# tRAGazon

./: .gitignore  README.md  pyproject.toml
RAG/: rag.py  self_query_rag.py
data_preparation/: df_transform.py  dim_reduction.py  get_embeddings.py  plots.py
